--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,12 @@ minecraft {
     runDir = "eclipse"
 }
 
+jar {
+        manifest {
+        attributes 'FMLAT': 'blackout_at.cfg'
+    }
+}
+
 dependencies {
     // you may put jars on which you depend on in ./libs
     // or you may define them like so..
