--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ group= "com.hilburn.blackout" // http://maven.apache.org/guides/mini/guide-namin
 archivesBaseName = "blackout"
 
 minecraft {
-    version = "1.7.10-10.13.1.1216-new"
+    version = "1.7.10-10.13.1.1217"
     runDir = "eclipse"
 }
 
